--- a/FractalInventory/Info.plist
+++ b/FractalInventory/Info.plist
@@ -38,11 +38,20 @@
 	</dict>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>external-accessory</string>
+	</array>
 	<key>UILaunchScreen</key>
 	<dict/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
+	</array>
+	<key>UISupportedExternalAccessoryProtocols</key>
+	<array>
+		<string>com.zebra.rfd8x00_easytext</string>
+		<string>com.symbol.rfd8X00_easytext</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
